examples/Passing/Variables/add_return.c
int main() {
    int a = 5;
    int b = 6;
    b = 6 + 7;
    b += 7;
    return (a += b);
}
