examples/Failing/Variables/fail_increment9.c
int main() {
    int a = 5;
    int b = 6;
    ++(a + b);
}
